fix: overflow

--- a/app/src/components/presalebox/style.css
+++ b/app/src/components/presalebox/style.css
@@ -313,7 +313,7 @@ input[type="number"] {
 
 .input-mecca-container input {
   width: 100%;
-  height: 35px;
+  height: 52px;
   border-radius: 5px;
   background-color: #dbdbdb;
   border: transparent;
@@ -403,7 +403,7 @@ input[type="number"] {
 
 @media (max-width: 575px) {
   .timer-digits{
-    width: 100%;
+    width: 24px;
   }
   .mecca-calc-wrap {
     padding: 8px;
