--- a/app/src/pages/airdrop/style.css
+++ b/app/src/pages/airdrop/style.css
@@ -292,5 +292,6 @@
 
   .input-mecca-container input {
     padding: 12px !important;
+    height: 46px !important;
   }
 }
